# claude-world

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude/commands/: achievements.md  skills.md  status.md  upgrade.md
.github/: PULL_REQUEST_TEMPLATE.md
hooks/: PostToolUse  PreToolUse  SessionStart  Stop  SubagentSpawn  SubagentStop  UserPromptSubmit  game_client.py  hook_client.py
scripts/: game_renderer.py  generate_sprites.py  run_demo.py  run_graphics_demo.py  save_frame.py  start_claude_world.py  test_events.py  test_hooks.py  test_socket.py
src/claude_world/: __init__.py  __main__.py
src/claude_world/app/: __init__.py  application.py  game_loop.py  pty_manager.py
src/claude_world/assets/: __init__.py  placeholder_generator.py  sprite_definitions.py
src/claude_world/engine/: __init__.py  claude_mapper.py  entity.py  game_engine.py  state.py
src/claude_world/plugin/: __init__.py  event_bridge.py  hooks.py
src/claude_world/renderer/: __init__.py  display.py  headless.py  particle_system.py  sprite_loader.py  terminal_graphics.py  terminal_size.py  world_objects.py
src/claude_world/types/: __init__.py  achievements.py  claude_events.py  entities.py  milestones.py  sprites.py  world.py
src/claude_world/worlds/: __init__.py  cloud_kingdom.py  (+4 more)
tests/: __init__.py  conftest.py  test_app.py  test_assets.py  test_engine.py  test_flickering.py  test_full_integration.py  test_integration.py  test_plugin.py  test_renderer.py  test_terminal_graphics.py  test_types.py  test_worlds.py
(+5 files in other folders)
