[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-world"
version = "0.1.0"
description = "An animated idle game that reacts to Claude Code"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-world = "claude_world.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_world"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "visual: marks tests as visual regression tests",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
